Final pass on initial endpoints to align for spec proposal, also change registration payload to a new type with single prop of status to allow for future expansion
